--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "jsdom": "^7.2.0",
     "mocha": "^2.3.3",
     "mocha-jsdom": "^1.0.0",
-    "moment": "^2.11.1",
     "react": "^0.14.0",
     "react-addons-test-utils": "^0.14.3",
     "react-dom": "^0.14.0",
     "webpack": "^1.12.14"
+  },
+  "dependencies": {
+    "moment": "^2.11.2"
   },
   "peerDependencies": {
     "react": "^0.14.0"
